@@ -7,6 +7,7 @@ our @ISA = qw(Log::Log4perl::Appender);
 use warnings;
 use strict;
 use Log::Log4perl::Config::Watch;
+use Fcntl;
 use constant _INTERNAL_DEBUG => 0;
 
 ##################################################
@@ -20,6 +21,7 @@ sub new {
         owner     => undef,
         group     => undef,
         autoflush => 1,
+        syswrite  => 0,
         mode      => "append",
         binmode   => undef,
         utf8      => undef,
@@ -68,14 +70,18 @@ sub file_open {
 ##################################################
     my($self) = @_;
 
-    my $arrows = ">";
+    my $arrows  = ">";
+    my $sysmode = (O_CREAT|O_WRONLY);
 
     my $old_umask = umask();
 
     if($self->{mode} eq "append") {
-        $arrows = ">>";
+        $arrows   = ">>";
+        $sysmode |= O_APPEND;
     } elsif ($self->{mode} eq "pipe") {
         $arrows = "|";
+    } else {
+        $sysmode |= O_TRUNC;
     }
 
     my $fh = do { local *FH; *FH; };
@@ -84,8 +90,13 @@ sub file_open {
 
     my $didnt_exist = ! -f $self->{filename};
 
-    open $fh, "$arrows$self->{filename}" or
-        die "Can't open $self->{filename} ($!)";
+    if($self->{syswrite}) {
+        sysopen $fh, "$self->{filename}", $sysmode or
+            die "Can't sysopen $self->{filename} ($!)";
+    } else {
+        open $fh, "$arrows$self->{filename}" or
+            die "Can't open $self->{filename} ($!)";
+    }
 
     if($didnt_exist and 
          ( defined $self->{owner} or defined $self->{group} )
@@ -114,7 +125,7 @@ sub file_open {
 
     $self->{fh} = $fh;
 
-    if ($self->{autoflush}) {
+    if ($self->{autoflush} and ! $self->{syswrite}) {
         my $oldfh = select $self->{fh}; 
         $| = 1; 
         select $oldfh;
@@ -207,8 +218,13 @@ sub log {
 
     my $fh = $self->{fh};
 
-    print $fh $params{message} or
-        die "Cannot write to '$self->{filename}': $!";
+    if($self->{syswrite}) {
+        syswrite $fh, $params{message} or
+            die "Cannot syswrite to '$self->{filename}': $!";
+    } else {
+        print $fh $params{message} or
+            die "Cannot write to '$self->{filename}': $!";
+    }
 }
 
 ##################################################
@@ -276,6 +292,15 @@ as executable to pipe output to. Default mode is C<"append">.
 
 C<autoflush>, if set to a true value, triggers flushing the data
 out to the file on every call to C<log()>. C<autoflush> is on by default.
+
+=item syswrite
+
+C<syswrite>, if set to a true value, makes sure that the appender uses
+syswrite() instead of print() to log the message. C<syswrite()> usually
+maps to the operating system's C<write()> function and makes sure that
+no other process writes to the same log file while C<write()> is busy.
+Might safe you from having to use other syncronisation measures like
+semaphores (see: Synchronized appender).
 
 =item umask
 
